Fixed colorcontrast menu item for mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ nav .separator {
 }
 
 nav .active a {
-    color: var(--purple_color);
+    color: #EEDBFF;
 }
 
 nav .active:hover {
